[package]
name = "authc"
version = "1.0.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.2.1"
hyper = "0.13.7"
hyper-rustls ="0.21.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", default-features = false, features = ["serde", "v4"] }
auth-common = { path = "../common" }
hex = "0.3.2"
fxhash = "0.2.1"
rust-argon2 = { version = "0.8.2", default-features = false }