[package]
name = "authc"
version = "1.0.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.2.3"
hyper = { version = "0.14.4", features = ["client", "http2"] }
hyper-rustls ="0.22.1"
serde_json = "1.0"
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", default-features = false, features = ["serde", "v4"] }
auth-common = { path = "../common" }
hex = "0.3.2"
fxhash = "0.2.1"
rust-argon2 = { version = "0.8.2", default-features = false }
