[package]
name = "auth-common"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.2", default-features = false, features = ["serde", "v4"] }
serde = { version = "1.0.115", default-features = false, features = ["derive"] }
rand = "0.8"
