[package]
name = "auth-server"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7.4", features = ["serde", "v4"] }
auth-common = { git = "https://gitlab.com/veloren/auth" }
lazy_static = "1.4.0"
failure = "0.1.5"
rouille = "3.0.0"
r2d2_postgres = "0.14.0"
r2d2 = "0.8.5"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
rust-argon2 = "0.5.1"
rand = "0.7.0"
dashmap = "1.0.4"
jemallocator = "0.3.2"
regex = "1.2.1"
simple-logging = "2.0.2"
log = "0.4"
